--- a/index.html
+++ b/index.html
@@ -15,25 +15,14 @@
 
 		<link rel="stylesheet" href="css/demo.css">
 		<link rel="stylesheet" href="css/avgrund.css">
-		<!-- <script type="text/javascript" src="js/avgrund.js"></script> -->
-		<script type="text/javascript" src="js/fathon_modal.js"></script>
+
 		<script>
-			var obj = null;
-			document.addEventListener("DOMContentLoaded", function(event) {
-				
-				obj = new FathomModal("#default-popup");
-				
-			});
-				function openDialog() {				
-					obj.show();
-					console.log()
-					//Avgrund.show( "#default-popup" );
-				}
-				function closeDialog() {
-					obj.hide();
-					obj.destroy();
-					//Avgrund.hide();
-				}			
+			function openDialog() {
+				Avgrund.show( "#default-popup" );
+			}
+			function closeDialog() {
+				Avgrund.hide();
+			}
 		</script>
 
 	</head>
@@ -75,6 +64,10 @@
 				<iframe id="facebook-button" src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Flab.hakim.se%2Favgrund%2F&layout=button_count&show_faces=false&width=83&action=like&font=arial&colorscheme=light&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:24px; position: relative; top: 4px;" allowTransparency="true"></iframe>
 			</div>
 		</article>
+
+		<div class="avgrund-cover"></div>
+
+		<script type="text/javascript" src="js/avgrund.js"></script>
 
 		<a class="fork-reveal" href="https://github.com/hakimel/avgrund"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
 
